@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.1-rc1
 ====================================
+- Make package grid update available Yes clickable to update
 - Cleaned up and better abstracted modRestClient and modRestCurlClient code
 - Fixed bug in setup during upgrade-advanced where DB information was not being checked correctly
 - Lots of improvements to handling and caching of thumbnails in manager
